--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.2",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "core-js": "^3.6.5",
