--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cryptocruz",
+  "name": "DuelArena",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "core-js": "^3.6.5",
     "crypto-browserify": "^3.12.0",
+    "cryptocurrency-icons": "^0.18.0",
     "ethereumjs-tx": "^2.1.2",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
@@ -21,22 +22,20 @@
     "stream-http": "^3.2.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.1",
-    "vue-konva": "^2.1.7",
-    "vue-router": "^3.5.2",
     "vue-toast-notification": "^0.6",
     "vuex": "^3.6.2",
     "web3": "^1.5.3",
     "webpack-dev-server": "^4.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "autoprefixer": "^10.3.4",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.7",
     "eslint": "^6.7.2",
@@ -51,8 +50,9 @@
     "style-loader": "^3.2.1",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.53.0",
+    "webpack": "^5.61.0",
     "webpack-cli": "^4.8.0"
   },
   "eslintConfig": {
