--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "os-browserify": "^0.3.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.1",
     "vue-toast-notification": "^0.6",
@@ -48,6 +49,7 @@
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
     "vue-svg-loader": "^0.16.0",
