--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@braid/vue-formulate": "^2.5.2",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
+    "chai": "^4.3.4",
     "core-js": "^3.6.5",
     "crypto-browserify": "^3.12.0",
     "cryptocurrency-icons": "^0.18.0",
@@ -45,10 +46,11 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "node-sass": "^7.0.1",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "sass": "^1.41.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.8",
