--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@braid/vue-formulate": "^2.5.2",
     "assert": "^2.0.0",
+    "axios": "^0.26.0",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
+    "coingecko-api": "^1.0.10",
     "core-js": "^3.6.5",
     "crypto-browserify": "^3.12.0",
     "cryptocurrency-icons": "^0.18.0",
@@ -25,6 +26,7 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.1",
+    "vue-select": "^3.18.3",
     "vue-toast-notification": "^0.6",
     "vuex": "^3.6.2",
     "web3": "^1.5.3",
