--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
