--- a/package.json
+++ b/package.json
@@ -4,58 +4,61 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "start": "webpack-dev-server --mode development",
-    "hot": "webpack-dev-server --mode development --hot",
     "build": "webpack --mode production",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "hot": "webpack-dev-server --mode development --hot",
+    "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
-    "assert": "^2.0.0",
-    "axios": "^0.26.0",
-    "buffer": "^6.0.3",
-    "chai": "^4.3.4",
+    "@vue/compat": "^3.1.0",
+    "axios": "^0.26.1",
+    "chai": "^4.3.6",
     "coingecko-api": "^1.0.10",
-    "core-js": "^3.6.5",
-    "crypto-browserify": "^3.12.0",
+    "core-js": "^3.22.0",
     "cryptocurrency-icons": "^0.18.0",
     "ethereumjs-tx": "^2.1.2",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "uuid": "^8.3.2",
-    "vue": "^2.6.11",
+    "vue": "^3.1.0",
     "vue-js-modal": "^2.0.1",
     "vue-select": "^3.18.3",
     "vue-toast-notification": "^0.6",
-    "vuex": "^3.6.2",
-    "web3": "^1.5.3",
-    "webpack-dev-server": "^4.3.0"
+    "vuex": "^4.0.2",
+    "web3": "^1.7.3",
+    "webpack-dev-server": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "autoprefixer": "^10.3.4",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
+    "@vue/compiler-sfc": "^3.2.33",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
+    "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
+    "https-browserify": "^1.0.0",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^2.3.0",
-    "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1",
-    "style-loader": "^3.2.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "os-browserify": "^0.3.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.1",
+    "url": "^0.11.0",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
-    "vue-svg-loader": "^0.16.0",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
   "eslintConfig": {
     "root": true,
