--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
-    "@vue/compat": "^3.1.0",
     "axios": "^0.26.1",
     "chai": "^4.3.6",
     "coingecko-api": "^1.0.10",
@@ -21,8 +20,7 @@
     "uuid": "^8.3.2",
     "vue": "^3.1.0",
     "vue-js-modal": "^2.0.1",
-    "vue-select": "^3.18.3",
-    "vue-toast-notification": "^0.6",
+    "vue-select": "^4.0.0-beta.3",
     "vuex": "^4.0.2",
     "web3": "^1.7.3",
     "webpack-dev-server": "^4.8.1"
