--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.22.0",
     "cryptocurrency-icons": "^0.18.0",
     "ethereumjs-tx": "^2.1.2",
+    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "uuid": "^8.3.2",
     "vue": "^3.1.0",
